--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,8 +8,8 @@
             <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
         {% block stylesheets %}
-            <link href='http://fonts.googleapis.com/css?family=Irish+Grover' rel='stylesheet' type='text/css'>
-            <link href='http://fonts.googleapis.com/css?family=La+Belle+Aurore' rel='stylesheet' type='text/css'>
+            <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+            <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
             <link href="{{ asset('css/screen.css') }}" type="text/css" rel="stylesheet" />
         {% endblock %}
         <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
@@ -30,7 +30,7 @@
 
                 <hgroup>
                     <h2>{% block blog_title %}<a href="#">A game of chess?</a>{% endblock %}</h2>
-                    <h3>{% block blog_tagline %}<a href="#">yes a game of chess</a>{% endblock %}</h3>
+                    <h3>{% block blog_tagline %}<a href="#">- Yes a game of chess</a>{% endblock %}</h3>
                 </hgroup>
             </header>
 
