--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,29 +11,13 @@
             <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
             <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
             <link href="{{ asset('css/screen.css') }}" type="text/css" rel="stylesheet" />
+			<link href="{{ asset('css/board.css') }}" type="text/css" rel="stylesheet" />
         {% endblock %}
         <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
 
         <section id="wrapper">
-            <header id="header">
-                <div class="top">
-                    {% block navigation %}
-                        <nav>
-                            <ul class="navigation">
-                                <li><a href="#">About</a></li>
-                             </ul>
-                        </nav>
-                    {% endblock %}
-                </div>
-
-                <hgroup>
-                    <h2>{% block blog_title %}<a href="#">A game of chess?</a>{% endblock %}</h2>
-                    <h3>{% block blog_tagline %}<a href="#">- Yes a game of chess</a>{% endblock %}</h3>
-                </hgroup>
-            </header>
-
             <section class="main-col">
                 {% block body %}{% endblock %}
             </section>
@@ -41,11 +25,6 @@
                 {% block sidebar %}{% endblock %}
             </aside>
 
-            <div id="footer">
-                {% block footer %}
-                    A game of chess.   
-                {% endblock %}
-            </div>
         </section>
 
         {% block javascripts %}{% endblock %}
