--- a/web/css/screen.css
+++ b/web/css/screen.css
@@ -7,14 +7,14 @@ body { line-height: 1;font-family: Arial, Helvetica, sans-serif;font-size: 12px;
 #wrapper a { text-decoration: none; color: #F48A00; }
 #wrapper span.highlight { color: #F48A00; }
 
-#header { border-bottom: 1px solid #ccc; margin-bottom: 20px; }
-#header .top { border-bottom: 1px solid #ccc; margin-bottom: 10px; }
+#header { border-bottom: 1px solid #ccc; margin-bottom: 5px; }
+#header .top { border-bottom: 1px solid #ccc; margin-bottom: 5px; }
 #header ul.navigation { list-style: none; text-align: right; }
 #header .navigation li { display: inline }
 #header .navigation li a { display: inline-block; padding: 10px 15px; border-left: 1px solid #ccc; }
-#header h2 { font-family: 'Oswald', sans-serif; font-size: 62px; text-align: center; line-height: 110px; }
+#header h2 { font-family: 'Oswald', sans-serif; font-size: 36px; text-align: center;  }
 #header h2 a { color: #000; }
-#header h3 { text-align: center; font-family: 'Yanone Kaffeesatz', sans-serif; font-size: 24px; margin-bottom: 20px; font-weight: normal; }
+#header h3 { text-align: center; font-family: 'Yanone Kaffeesatz', sans-serif; font-size: 16px; margin-bottom: 5px; font-weight: normal; }
 
 .main-col { width: 700px; display: inline-block; float: left; border-right: 1px solid #ccc; padding: 20px; margin-bottom: 20px; }
 .sidebar { width: 239px; padding: 10px; display: inline-block; }
