add output of moves to screen from to

--- a/src/Bundle/ChessBundle/Resources/views/layout.html.twig
+++ b/src/Bundle/ChessBundle/Resources/views/layout.html.twig
@@ -2,5 +2,9 @@
 {% extends '::base.html.twig' %}
 
 {% block sidebar %}
-   Here vi will put info start button and alike. 
+<div id="start">Start-button. </div></br></br>
+	
+
+<div id="moves">Game Moves: </br></br> </div>
+
 {% endblock %}
