--- a/src/Bundle/ChessBundle/Resources/views/Game/index.html.twig
+++ b/src/Bundle/ChessBundle/Resources/views/Game/index.html.twig
@@ -2,69 +2,156 @@
 {% extends 'BundleChessBundle::layout.html.twig' %}
 
 {% block body %}
-	<div class="chessboard">
-		<div class='white' id='a8'></div> 
-		<div class='black' id='b8'></div> 
-		<div class='white' id='c8'></div> 
-		<div class='black' id='d8'></div> 
-		<div class='white' id='e8'></div> 
-		<div class='black' id='f8'></div> 
-		<div class='white' id='g8'></div> 
-		<div class='black' id='h8'></div> 
-		<div class='black' id='a7'></div> 
-		<div class='white' id='b7'></div> 
-		<div class='black' id='c7'></div> 
-		<div class='white' id='d7'></div> 
-		<div class='black' id='e7'></div> 
-		<div class='white' id='f7'></div> 
-		<div class='black' id='g7'></div> 
-		<div class='white' id='h7'></div> 
-		<div class='white' id='a6'></div> 
-		<div class='black' id='b6'></div> 
-		<div class='white' id='c6'></div> 
-		<div class='black' id='d6'></div> 
-		<div class='white' id='e6'></div> 
-		<div class='black' id='f6'></div> 
-		<div class='white' id='g6'></div> 
-		<div class='black' id='h6'></div> 
-		<div class='black' id='a5'></div> 
-		<div class='white' id='b5'></div> 
-		<div class='black' id='c5'></div> 
-		<div class='white' id='d5'></div> 
-		<div class='black' id='e5'></div> 
-		<div class='white' id='f5'></div> 
-		<div class='black' id='g5'></div> 
-		<div class='white' id='h5'></div> 
-		<div class='white' id='a4'></div> 
-		<div class='black' id='b4'></div> 
-		<div class='white' id='c4'></div> 
-		<div class='black' id='d4'></div> 
-		<div class='white' id='e4'></div> 
-		<div class='black' id='f4'></div> 
-		<div class='white' id='g4'></div> 
-		<div class='black' id='h4'></div> 
-		<div class='black' id='a3'></div> 
-		<div class='white' id='b3'></div> 
-		<div class='black' id='c3'></div> 
-		<div class='white' id='d3'></div> 
-		<div class='black' id='e3'></div> 
-		<div class='white' id='f3'></div> 
-		<div class='black' id='g3'></div> 
-		<div class='white' id='h3'></div> 
-		<div class='white' id='a2'></div> 
-		<div class='black' id='b2'></div> 
-		<div class='white' id='c2'></div> 
-		<div class='black' id='d2'></div> 
-		<div class='white' id='e2'></div> 
-		<div class='black' id='f2'></div> 
-		<div class='white' id='g2'></div> 
-		<div class='black' id='h2'></div> 
-		<div class='black' id='a1'></div> 
-		<div class='white' id='b1'></div> 
-		<div class='black' id='c1'></div> 
-		<div class='white' id='d1'></div> 
-		<div class='black' id='e1'></div> 
-		<div class='white' id='f1'></div> 
-		<div class='black' id='g1'></div> 
-		<div class='white' id='h1'></div> 
+<script type="text/javascript">
+	function dragStart(event) {
+		event.dataTransfer.effectAllowed = 'move';
+		event.dataTransfer.setData("Text", event.target.getAttribute('id'));
+	}
+	
+	function dragOver(event) {
+		return false;
+	}
+	
+	function drop(event) {
+        var to = event.dataTransfer.getData("Text");
+	var from = event.target.getAttribute('id');
+	console.log(to);
+	var element = document.getElementById(to);
+	console.log(from);	
+	event.target.innerHTML = element.innerHTML; // Moving piece to new cell
+	element.innerHTML = ""; // Clearing old cell
+	event.preventDefault(); // Consider using `event.preventDefault` instead
+	var txt = document.createTextNode(":"+from+"-"+to+"| ");
+	document.getElementById('moves').appendChild(txt);
+	return false;
+	}
+</script>	
+	
+	<!-- ******************************************************************** -->
+	<!-- The content below is for demonstration of some common HTML5 elements  -->
+	<!-- orginal code found at http://www.buryknightschess.org.uk/play-chess/ -->
+	
+	<div id="board" ondragstart="dragStart(event);" ondragover="return dragOver(event);" ondrop="return drop(event);" >
+	
+		
+	<ul>
+		<div id="coord" class=" 5 dsq" ><span class="label">8</span></div>
+
+		<li id="A8"  draggable="true">&#9820;</li>
+		<li id="B8" class="5 dsq" draggable="true">&#9822;</li>
+		<li id="C8"  draggable="true">&#9821;</li>
+		<li id="D8" class="5 dsq" draggable="true">&#9819;</li>
+		<li id="E8"  draggable="true">&#9818;</li>
+		<li id="F8"class="5 dsq" draggable="true">&#9821;</li>
+		<li id="G8"  draggable="true">&#9822;</li>	
+		<li id="H8"class="5 dsq"  draggable="true">&#9820;</li>
+	</ul>
+		
+		
+	<ul>
+		<div id="coord" class=" 5 dsq" ><span class="label">7</span></div>
+
+		<li id="A7"  draggable="true">&#9823; </li>
+		<li id="B7"  draggable="true">&#9823;</li>
+		<li id="C7"class="5 dsq"  draggable="true">&#9823;</li>
+		<li id="D7" draggable="true" >&#9823; </li>
+		<li id="E7" class="5 dsq" draggable="true">&#9823;</li>
+		<li id="F7" draggable="true" >&#9823; </li>
+		<li id="G7" class="5 dsq"  draggable="true">&#9823;</li>	
+		<li id="H7" draggable="true" >&#9823;</li>
+
+	</ul>
+
+			
+	<ul>
+		<div id="coord"class="5 dsq"><span class="label">6</span></div>
+		<li id="A6"draggable="true" ></li>
+		<li id="B6"class="5 dsq"draggable="true"></li>	
+		<li id="C6"draggable="true"></li>	
+		<li id="D6"class="5 dsq"draggable="true"></li>	
+		<li id="E6"draggable="true"></li>	
+		<li id="F6"class="5 dsq"draggable="true" ></li>	
+		<li id="G6"draggable="true"></li>	
+		<li id="H6"class="5 dsq"draggable="true" ></li>	
+	</ul>
+
+		
+	<ul>
+		<div id="coord" class=" 5 dsq"><span class="label">5</span></div>
+
+		<li id="A5"draggable="true"></li>
+		<li id="B5"draggable="true"></li>
+		<li id="C5"class="5 dsq"draggable="true"></li>
+		<li id="D5"draggable="true"></li>
+		<li id="E5"class="5 dsq"draggable="true"></li>
+		<li id="F5"draggable="true"></li>
+		<li id="G5"class="5 dsq"draggable="true"></li>
+		<li id="H5"draggable="true"></li>
+	</ul>
+				
+	<ul>
+		<div id="coord" class="5 dsq"><span class="label">4</span></div>	
+
+		<li id="A4"draggable="true"></li>
+		<li id="B4"class="5 dsq"draggable="true"></li>
+		<li id="C4"draggable="true"></li>
+		<li id="D4"class="5 dsq"draggable="true"></li>
+		<li id="E4"draggable="true"></li>
+		<li id="F4"class="5 dsq"draggable="true"></li>
+		<li id="G4"draggable="true"></li>
+		<li id="H4"class="5 dsq"draggable="true"></li>
+	</ul>
+				
+	<ul>
+		<div id="coord" class="5 dsq"><span class="label">3</span></div>		
+		<li id="A3" class="5 dsq"draggable="true"></li>
+		<li id="B3"draggable="true"></li>
+		<li id="C3"class="5 dsq"draggable="true"></li>
+		<li id="D3"draggable="true"></li>
+		<li id="E3"class="5 dsq"draggable="true"></li>
+		<li id="F3"draggable="true"></li>
+		<li id="G3"class="5 dsq"draggable="true"></li>
+		<li id="H3"draggable="true"></li>
+	</ul>
+				
+	<ul>
+	<div id="coord" class=" 5 dsq"><span class="label">2</span></div>		
+		<li id="A2"  draggable="true">&#9817;</li>
+		<li id="B2"class="5 dsq" draggable="true">&#9817;</li>
+		<li id="C2" draggable="true">&#9817;</li>
+		<li id="D2"class="5 dsq" draggable="true">&#9817;</li>
+		<li id="E2" draggable="true">&#9817;</li>
+		<li id="F2"class="5 dsq" draggable="true">&#9817;</li>
+		<li id="G2" draggable="true">&#9817;</li>
+		<li id="H2"class="5 dsq" draggable="true">&#9817;</li>
+	</ul>
+	
+	<ul>
+
+		<div id="coord" class=" 5 dsq"><span class="label">1</span></div>		
+		<li id="A1"class=" 5 dsq" draggable="true">&#9814;</li>
+		<li id="B1" draggable="true">&#9816;</li>
+		<li id="C1"class=" 5 dsq" draggable="true">&#9815;</li>
+		<li id="D1" draggable="true">&#9813;</li>
+		<li id="E1"class=" 5 dsq" draggable="true">&#9812;</li>
+		<li id="F1" draggable="true">&#9815;</li>
+		<li id="G1"class=" 5 dsq" draggable="true">&#9816;</li>
+		<li id="H1" draggable="true">&#9814;</li>
+
+	</ul>
+		<div id="coord_bottom_bar" class=" 5 dsq">	
+	
+	        <div id="coord_bottom_bar_no">  <span class="coordbot_dsq">A</span></div>
+		<div id="coord_bottom_bar_no">	<span class="coordbot_dsq">B</span></div>
+		<div id="coord_bottom_bar_no">	<span class="coordbot_dsq">C</span></div>
+		<div id="coord_bottom_bar_no">	<span class="coordbot_dsq">D</span></div>
+		<div id="coord_bottom_bar_no">	<span class="coordbot_dsq">E</span></div>
+		<div id="coord_bottom_bar_no">	<span class="coordbot_dsq">F</span></div>
+		<div id="coord_bottom_bar_no">	<span class="coordbot_dsq">G</span></div>
+		<div id="coord_bottom_bar_no">	<span class="coordbot_dsq">H</span></div>
+	</ul>
+					
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js">
+        </script>
+
 {% endblock %}
