--- a/src/Bundle/ChessBundle/Resources/views/Game/index.html.twig
+++ b/src/Bundle/ChessBundle/Resources/views/Game/index.html.twig
@@ -2,8 +2,8 @@
 {% extends 'BundleChessBundle::layout.html.twig' %}
 
 {% block body %}
-<script type="text/javascript">
 
+<script type="text/javascript">
 // stores the reference to the XMLHttpRequest object
 var xmlHttp = createXmlHttpRequestObject();
 // retrieves the XMLHttpRequest object
@@ -46,31 +46,24 @@ function dragOver(event) {
 }
 
 function drop(event) {
-var from = event.dataTransfer.getData("Text");
-var to = event.target.getAttribute('id');
-var element = document.getElementById(to);
-event.target.innerHTML = element.innerHTML; // Moving piece to new cell
-element.innerHTML = ""; // Clearing old cell
-event.preventDefault(); // Consider using `event.preventDefault` instead
-var text = document.createTextNode(from+"-"+to);
-var txt = from+"-"+to;
-document.getElementById('moves').appendChild(text);
-	// proceed only if the xmlHttp object isn't busy
-if (xmlHttp.readyState == 4 || xmlHttp.readyState == 0) {
-	// retrieve the name typed by the user on the form
-	text = encodeURIComponent(txt);
-	// execute the /Entity/Game.php page from the server
-	xmlHttp.open("GET", "http://localhost/symfony-of-chess/src/Bundle/ChessBundle/Entity/Game.php?text=" + txt, true);
-	// define the method to handle server responses
-	xmlHttp.onreadystatechange = handleServerResponse;
-	// make the server request
-	xmlHttp.send(null);
-}
-// else
-// if the connection is busy, try again after one second
-// setTimeout('drop()', 1000);
+	var from = event.dataTransfer.getData("Text");
+	var to = event.target.getAttribute('id');
+	var txt = from+"-"+to;
+	event.preventDefault(); // Consider using `event.preventDefault` instead
+	var text = document.createTextNode(from+"-"+to);
 
-return false;
+	// proceed only if the xmlHttp object isn't busy
+	if (xmlHttp.readyState == 4 || xmlHttp.readyState == 0) {
+		// retrieve the name typed by the user on the form
+		text = encodeURIComponent(txt);
+		// execute the /Entity/Game.php page from the server
+		xmlHttp.open("GET", "http://localhost/symfony-of-chess/src/Bundle/ChessBundle/Entity/Game.php?text=" + txt, true);
+		// define the method to handle server responses
+		xmlHttp.onreadystatechange = handleServerResponse;
+		// make the server request
+		xmlHttp.send(null);
+	}
+	return false;
 }
 
 
@@ -78,34 +71,23 @@ return false;
 function handleServerResponse()	{
 	// move forward only if the transaction has completed
 	if (xmlHttp.readyState == 4) {
-	console.log('server working'); 
 	// status of 200 indicates the transaction completed successfully
 		if (xmlHttp.status == 200) {
-		// extract the XML retrieved from the server
-		xmlResponse = xmlHttp.responseXML;
-
-		// obtain the document element (the root element) of the XML structure
-		xmlDocumentElement = xmlResponse.documentElement;
-		// get the text message, which is in the first child of
-		// the the document element
-		move = xmlDocumentElement.firstChild.data;
-		// update the client display using the data received from the server
-		document.getElementById("moves").innerHTML = move;
-		// now update the board
-		var from = move.substring(0,2);
-		console.log(to);
-		var to = move.substring(3,5);
-		console.log(from);
-		var element = document.getElementById(from);
-		console.log(element);		
-		var target = document.getElementById(to);
-		
-		
-		target.innerHTML = element.innerHTML; // Moving piece to new cell
-		console.log(element.innerHTML);
-		element.innerHTML = ""; // Clearing old cell		
-		// restart sequence
-		// setTimeout('process()', 1000);
+			// extract the XML retrieved from the server
+			xmlResponse = xmlHttp.responseXML;
+			// obtain the document element (the root element) of the XML structure
+			xmlDocumentElement = xmlResponse.documentElement;
+			// get the text message, which is in the first child of game.php
+			move = xmlDocumentElement.firstChild.data;
+			// update the client display using the data received from the server
+			document.getElementById("moves").innerHTML = move;
+			// now update the board
+			var from = move.substring(0,2);
+			var to = move.substring(3,5);
+			var element = document.getElementById(from);
+			var target = document.getElementById(to);
+			target.innerHTML = element.innerHTML; // Moving piece to new cell
+			element.innerHTML = ""; // Clearing old cell		
 		}
 		// a HTTP status different than 200 signals an error
 		else {
@@ -114,7 +96,6 @@ function handleServerResponse()	{
 		}
 	}
 }
-
 </script>	
 	
 	<!-- ******************************************************************** -->
