adding start link start game

--- a/src/Bundle/ChessBundle/Resources/views/layout.html.twig
+++ b/src/Bundle/ChessBundle/Resources/views/layout.html.twig
@@ -2,7 +2,7 @@
 {% extends '::base.html.twig' %}
 
 {% block sidebar %}
-<div id="start">Start-button. </div></br></br>
+<div id="start"><a href="game">Start a new game</a></div></br></br>
 	
 
 <div id="moves">Game Moves: </br></br> </div>
