--- a/web/css/screen.css
+++ b/web/css/screen.css
@@ -26,3 +26,5 @@ body { line-height: 1;font-family: Arial, Helvetica, sans-serif;font-size: 12px;
 .main-col p { line-height: 1.5em; margin-bottom: 20px; }
 
 #footer { border-top: 1px solid #ccc; clear: both; text-align: center; padding: 10px; color: #aaa; }
+
+#error {font-weight: bold;color: #f00; margin-top: 60px;}
