--- a/web/css/board.css
+++ b/web/css/board.css
@@ -4,163 +4,222 @@
 	width: 12.5%;
 	height: 12.5%;
 }
-
 .black {
 	float: left;
 	background: #333;
 	width: 12.5%;
 	height: 12.5%;
 }
-
 .chessboard {
 	margin: 0 auto;
 	width: 500px;
 	height: 500px;
 	background: #666;
 }
-
-
 #coord { /*  number bar */
-width:25px; 
-float:left;
+	width: 25px;
+	float: left;
 }
-
 #coord_bottom_bar { /*  alfa bar */
-width:500px;
-height:25px;
-margin:0;
+	width: 500px;
+	height: 25px;
+	margin: 0;
 }
-
 #coord_bottom_bar ul li {
-width:88px;
-float:left;
-display:inline;
-height:40px;
+	width: 88px;
+	float: left;
+	display: inline;
+	height: 40px;
 }
-
 #coord_bottom_bar_no {
-display:inline;
-height:20px;
-padding:13px;
-width:700px;
-font-size:24pt;  /* the size of alfa */
+	display: inline;
+	height: 20px;
+	padding: 13px;
+	width: 700px;
+	font-size: 24pt;  /* the size of alfa */
 }
-
 #coord_bottom ul {
-float:left;
-display:inline;
+	float: left;
+	display: inline;
 }
-
-
 #board ul {
-cursor:hand;cursor:pointer; 
+	cursor: pointer;
 }
-
-#board{ 
-	margin:0;
-	border:10px outset gray;
-	float:left;
-	width:520px;
-	height:520px;
-	position:relative;
-	margin:10px;
-	padding:7px 0 0 7px;
+#board {
+	margin: 0;
+	border: 10px outset gray;
+	float: left;
+	width: 520px;
+	height: 520px;
+	position: relative;
+	margin: 10px;
+	padding: 7px 0 0 7px;
 }
-
 #board ul {
-	margin:0; /* 340/40=42,5 2,5*8=20 */
-	height:60px;
-	width:520px; 
-	position:relative;
-	background-color:rgba(255,255,255,0.5);
-	color:#222;
-	font-size:24pt;  /* the size of the pieces and numbers */
+	margin: 0; /* 340/40=42,5 2,5*8=20 */
+	height: 60px;
+	width: 520px;
+	position: relative;
+	background-color: rgba(255,255,255,0.5);
+	color: #222;
+	font-size: 24pt;  /* the size of the pieces and numbers */
 }
-
-#board ul li{
-	display:inline;
-	float:left;
-	position:relative;
-	height:58px; /* (38) */
-	width:58px;
-	border:1px solid silver;
-	text-align:center;
+#board ul li {
+	display: inline;
+	float: left;
+	position: relative;
+	height: 58px; /* (38) */
+	width: 58px;
+	border: 1px solid silver;
+	text-align: center;
 	font-size: 150%;
 }
-
-#board ul li:not(.selected){
+#board ul li:not(.selected) {
+}
+#board ul li img {
+	display: block;
+	position: relative;
+}
+#board ul:nth-child(odd) li:nth-child(odd) {
+	background-color: rgba(0,0,0,0.5);
+}
+#board ul:nth-child(even) li:nth-child(even) {
+	background-color: rgba(0,0,0,0.5);
+}
+#board ul li img.active:hover {
+	border: 1px solid red;
+	top: -1px;
+	left: -1px;
+}
+#board ul:first-child div:hover {
+	margin-top: 0;
+}
+#board ul li:first-child:hover {
+	margin-left: 0;
+}
+#board ul li.legal {
+	background-color: rgba(0,0,200,0.6) !important;
+}
+#board ul li.legal:hover {
+	background-color: rgba(0,100,200,0.6) !important;
+}
+#board ul li.threat {
+	background-color: rgba(200,0,0,0.6) !important;
+}
+.label {
+	position: absolute;
+	bottom: 0px;
+	left: 2px;
+	z-index: 100;
+}
+.selected {
+	background-color: silver !important;
+	border: 1px solid purple;
+	z-index: 5;
+}
+#row .1 .2 .3 .4 .5 .6 .7 .8 {
+	height: 50px;
+	width: 450px;
+	float: left;
+}
+#col .1 .2 .3 .4 .5 .6 .7 .8 {
+	height: 450px;
+	width: 50px;
+	float: right;
+}
+.lsq {
+	height: 40px;
+	width: 40px;
+	background-color: grey;
+}
+.dsq {
+	height: 40px;
+	width: 40px background-color :olive;
+}
+.coordbot_dsq {
+	height: 20px;
+	width: 60px;
+	padding: 5px;
+}
+#leftcoord {
+	position: absolute;
+	bottom: 0px;
+	left: 2px;
+	z-index: 100;
+	width: 5px;
+}
+form.players {
+	font-size: 12px;
+}
+form.players div {
+	margin-bottom: 10px;
+}
+form.players label {
+	
+	float: left;
+	margin-right: 10px;
+	margin-left: 5px;
+	margin-bottom: 3px;
+	text-align: left;
+	
+	font-weight: bold;
+	vertical-align: top;
+	padding-top: 10px;
+}
+form.players input[type="text"], form.players input[type="submit"] {
+	margin-left: 5px;
+	width: 200px;
+	line-height: 20px;
+	font-size: 14px;
+	min-height: 20px;
+}
+h2{
+	font-size: 16px;
 }
 
-#board ul li img{ 
-	display:block; 
-	position:relative;
+.playernames{
+	border: solid 1px #ccc;
+	padding: 30px;
+	border-radius: 25px;
+	width: 230px;
 }
 
-#board ul:nth-child(odd) li:nth-child(odd){background-color:rgba(0,0,0,0.5);}
-
-#board ul:nth-child(even) li:nth-child(even){background-color:rgba(0,0,0,0.5);}
-
-#board ul li img.active:hover{
-	border:1px solid red;
-	top:-1px;
-	left:-1px;
+.moves{
+	background: #fff;
+	float: left;
+	width: 235px;
+	border: solid 1px #ccc;
+	padding: 5px;
+	border-radius: 10px;
+	min-height: 300px;
+	margin-bottom: 20px;
 }
 
-#board ul:first-child div:hover{margin-top:0;}
-#board ul li:first-child:hover{margin-left:0;}
-#board ul li.legal{background-color:rgba(0,0,200,0.6) !important;}
-#board ul li.legal:hover{background-color:rgba(0,100,200,0.6) !important;}
-#board ul li.threat{background-color:rgba(200,0,0,0.6) !important;}
-
-.label{
-position:absolute;
-bottom:0px;
-left:2px;
-z-index:100;
+#blackmoves{
+	float: right;
 }
 
-.selected{
-background-color:silver !important;
-border:1px solid purple;
-z-index:5;
+.notation_wrapper h1{
+	font-size: 20px;
+	font-weight: bold;
+	margin-bottom: 20px;
+}
+.error{
+ 	clear: both;
+ 	background: #13455B;
+ 	width: 300px;
+ 	height: 100px;
+} 
+.notation_wrapper{
+	width:500px;
 }
 
-
-#row .1 .2 .3 .4 .5 .6 .7 .8{
-height:50px;
-width: 450px;
-float:left;
+.left-side{
+	width:249px;
+	float: left;
+	
 }
-
-#col .1 .2 .3 .4 .5 .6 .7 .8{
-height:450px;
-width:50px;
-float:right;
+.right-side{
+	width:249px;
+	float:right;
 }
-
-.lsq{
-height:40px;
-width:40px;
-background-color:grey;
-}
-
-.dsq{
-height:40px;
-width:40px
-background-color:olive;
-}
-
-.coordbot_dsq{
-height:20px;
-width:60px;
-padding:5px;
-}
-
-#leftcoord{
-position:absolute;
-bottom:0px;
-left:2px;
-z-index:100;
-width:5px;
-}
-
