--- a/src/Bundle/ChessBundle/Resources/views/Game/index.html.twig
+++ b/src/Bundle/ChessBundle/Resources/views/Game/index.html.twig
@@ -125,7 +125,23 @@
 		<div id="coord_bottom_bar_no">	<span class="coordbot_dsq">H</span></div>
 	</ul>
 	
-	<script type="text/javascript" src="{{ asset('bundles/Bundle/ChessBundle/js/events.js') }}"></script>
  	<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
+	<script type="text/javascript" src="{{ asset('bundles/Bundle/ChessBundle/js/events.js') }}"></script>
+
+{% endblock %}
+{% block sidebar %}
+
+	<div class="notation_wrapper"> 
+		<div class="left-side">
+			<p> In the white corner: </p> <h1> {{ player1 }} </h1> <div id="whitemoves" class="moves"> White Game Moves: </br></br> </div>
+		</div>
+		<div class="right-side">
+			<p> In the black corner: </p> <h1> {{ player2 }} </h1> <div id="blackmoves" class="moves"> Black Game Moves: </br></br> </div>
+		</div>
+	</div>
+	
+	<div id="start"><a href="{{ path('BundleChessBundle_homepage') }}">Start a new game</a></div></br></br>
+	<div id="error"></br></br> </div>
+
 
 {% endblock %}
