--- a/src/Bundle/ChessBundle/Resources/views/layout.html.twig
+++ b/src/Bundle/ChessBundle/Resources/views/layout.html.twig
@@ -2,12 +2,12 @@
 {% extends '::base.html.twig' %}
 
 {% block sidebar %}
-<div id="start"><a href="game">Start a new game</a></div></br></br>
-	
+
 
 <div id="moves">Game Moves: </br></br> </div>
 
 <div id="error"></br></br> </div>
+<div id="players"></br></br> </div>
 
 
 {% endblock %}
