spelnotation med utslagna pjase, men dokumentation

--- a/src/Bundle/ChessBundle/Resources/views/Game/index.html.twig
+++ b/src/Bundle/ChessBundle/Resources/views/Game/index.html.twig
@@ -139,9 +139,9 @@
 			<div id="blackmoves" class="moves"> <p> In the black corner: </p> <h1> {{ player2 }} </h1><p class="blackturn""></p>Black Game Moves: </br></br> </div>
 		</div>
 	</div>
-	
-	
-	
+	<div class="errorbox">
+		<h1>Utslagna pieces: <div id="x_piece"> &nbsp; </br></br> </div> </h1>
+	</div>
 	<div class="errorbox">
 		<h1>Message: <div id="error"> &nbsp; </br></br> </div> </h1>
 		
