--- a/web/css/board.css
+++ b/web/css/board.css
@@ -252,7 +252,7 @@ h2{
 	width: 480px;
 	min-height: 40px;
 	clear: both;
-	margin-top:60px;
+	margin-top:20px;
 }
 .button_control{
 	background:#fff;
@@ -262,4 +262,7 @@ h2{
 	width: 140px;
 	float:left;
 	margin-right: 30px;
+}
+#x_piece{
+	display: inline;
 }
