--- a/web/css/screen.css
+++ b/web/css/screen.css
@@ -27,4 +27,4 @@ body { line-height: 1;font-family: Arial, Helvetica, sans-serif;font-size: 12px;
 
 #footer { border-top: 1px solid #ccc; clear: both; text-align: center; padding: 10px; color: #aaa; }
 
-#error {font-weight: bold;color: #f00; display:inline;}
+#error {font-weight: bold;color: #f00;}
