battrat pa i js filen lite, andrat till bla schackbrada

--- a/src/Bundle/ChessBundle/Resources/views/Game/index.html.twig
+++ b/src/Bundle/ChessBundle/Resources/views/Game/index.html.twig
@@ -133,14 +133,22 @@
 
 	<div class="notation_wrapper"> 
 		<div class="left-side">
-			 <div id="whitemoves" class="moves"><p> In the white corner: </p> <h1> {{ player1 }} </h1><p class="whiteturn""></p>White Game Moves: </br></br> </div>
+			 <div id="whitemoves" class="moves">
+				 <p> In the white corner: </p> 
+				 <h1> {{ player1 }} </h1>
+				 <p class="whiteturn"></p> White Game Moves: </br></br> 
+			 </div>
 		</div>
 		<div class="right-side">
-			<div id="blackmoves" class="moves"> <p> In the black corner: </p> <h1> {{ player2 }} </h1><p class="blackturn""></p>Black Game Moves: </br></br> </div>
+			<div id="blackmoves" class="moves"> 
+			<p> In the black corner: </p> 
+			<h1> {{ player2 }} </h1>
+			<p class="blackturn""></p> Black Game Moves: </br></br> 
+			</div>
 		</div>
 	</div>
 	<div class="errorbox">
-		<h1>Utslagna pieces: <div id="x_piece"> &nbsp; </br></br> </div> </h1>
+		<h1>Hit pieces: <div id="x_piece"> </div> </h1>
 	</div>
 	<div class="errorbox">
 		<h1>Message: <div id="error"> &nbsp; </br></br> </div> </h1>
