persistens, spara spel, ladda sparade spel fungerar nu. Med Palle

--- a/src/Bundle/ChessBundle/Resources/views/Game/index.html.twig
+++ b/src/Bundle/ChessBundle/Resources/views/Game/index.html.twig
@@ -159,7 +159,7 @@
 	</div>
 	<div class="errorbox">
 		<div id="start" class="button_control"><a href="{{ path('BundleChessBundle_homepage') }}">Start a new game</a></div>
-		<div class="button_control">Save this game</div>
+		<div id="savegame" class="button_control">Save this game</div>
 		<div id="startoldgame" class="button_control"> Play saved game </div>
 	</div>
 	<div id="thegameid">{{ gameid }}</div>
