med katarina början på multiplayer funtionalitet

--- a/src/Bundle/ChessBundle/Resources/views/Game/index.html.twig
+++ b/src/Bundle/ChessBundle/Resources/views/Game/index.html.twig
@@ -162,7 +162,9 @@
 		<div id="savegame" class="button_control">Save this game</div>
 		<div id="startoldgame" class="button_control"> Play saved game </div>
 	</div>
+	<div id="turn"></div> 
 	<div id="thegameid">{{ gameid }}</div>
+	
 	
 
 
