Nu fungerar login, men inte multiplayer annu

--- a/src/Bundle/ChessBundle/Resources/views/Game/index.html.twig
+++ b/src/Bundle/ChessBundle/Resources/views/Game/index.html.twig
@@ -133,7 +133,7 @@
 {% block sidebar %}
 
 	<div class="notation_wrapper"> 
-		<div class="left-side">
+		<div class="left-side containers">
 			 <div id="whitemoves" class="moves">
 				 <p> In the white corner: </p> 
 				 <h1 id="player1"> {{ player1 }} </h1>
@@ -141,7 +141,7 @@
 				 <span id="whiteprint"> </span> 
 			 </div>
 		</div>
-		<div class="right-side">
+		<div class="right-side containers">
 			<div id="blackmoves" class="moves"> 
 			<p> In the black corner: </p> 
 			<h1 id="player2"> {{ player2 }} </h1>
