--- a/web/css/board.css
+++ b/web/css/board.css
@@ -294,3 +294,30 @@ h2{
 	margin-top:10px;
 	overflow:auto;
 }
+
+.notation_wrapper ol li{
+	list-style-type: none;
+	margin:5px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
