Med Palle, multiplayer fungerar, yeaaaah

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -27,6 +27,8 @@
 
         </section>
 
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+         	<script type="text/javascript" src="{{ asset('bundles/Bundle/ChessBundle/js/jquery-1.7.min.js') }} "></script>
+        {% endblock %}
     </body>
 </html>
